--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -102,42 +102,45 @@
       <h3 class="subtitle">select up to 5 partners:</h3>
     </div>
     <div class="col-sm-9">
-      <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with <span ng-repeat="country in reporting" ng-style="{color:country.color}" >{{country.RICname}}<span ng-if="!$last">, </span></span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}</h3>
+      <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
+      <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
+      <span ng-if="!$last">, </span>
+      </span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}</h3>
     </div>
   </div>
   <div id="select-lineChart">
     <div class="select-dropdown col-sm-10" ng-show="RICentitiesDD.length">
 
       <ui-select  class="selectPartners" ng-model="entities.sourceCountryEntity.selected" theme="bootstrap">
-        <match placeholder="Select a Country...">{{$select.selected.RICname}}</match>
+        <match placeholder="Country...">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingCountryEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
 
       <ui-select class="selectPartners" ng-model="entities.sourceColonialEntity.selected" theme="bootstrap">
-        <match placeholder="Select a Colonial area...">{{$select.selected.RICname}}</match>
+        <match placeholder="Colonial area...">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingColonialEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
 
       <ui-select class="selectPartners" ng-model="entities.sourceGeoEntity.selected" theme="bootstrap">
-        <match placeholder="Select a Geographical area...">{{$select.selected.RICname}}</match>
+        <match placeholder="Geographical area...">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingGeoEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
 
       <ui-select class="selectPartners" ng-model="entities.sourceContinentEntity.selected" theme="bootstrap">
-        <match placeholder="Select a Continent...">{{$select.selected.RICname}}</match>
+        <match placeholder="Continent...">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingContinentEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
 
       <ui-select class="selectPartners" ng-model="entities.sourceWorldEntity.selected" theme="bootstrap">
-        <match placeholder="Select a World aggregate...">{{$select.selected.RICname}}</match>
+        <match placeholder="World aggregate...">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingWorldEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
@@ -159,13 +162,13 @@
     </div>
     
   </div>
-  <!-- <div class="row">
+  <div class="row">
         <div class="col-sm-12">
           <p class="filter">selected partners:</p>
           <div list-world></div>
         </div>
       </div>
-  </div> -->
+  </div>
 </div>
 <!-- <div class="container"> -->
 <!--   <div class="row">
