--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -1,70 +1,133 @@
-<div class="container">
-  <div class="row">
-  	<div class="timeline-cont col-sm-12">
-      <h4>Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span> (aggregated), {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
-      <div stacked-timeline-world></div>
-      <div missing></div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-      <h3 class="subtitle">select up to 5 reporting entities</h3>
-      <div id="select" class="row">
-        <div class="select-dropdown col-sm-12">
-          <ui-select ng-model="entities.sourceCountryEntity.selected" theme="bootstrap">
-          <match placeholder="Select a Country...">{{$select.selected.RICname}}</match>
-          <choices repeat="item in reportingCountryEntities | filter: $select.search">
-            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-          </choices>
-        </ui-select>
-          <ui-select ng-model="entities.sourceColonialEntity.selected" theme="bootstrap">
-          <match placeholder="Select a Colonial area...">{{$select.selected.RICname}}</match>
-          <choices repeat="item in reportingColonialEntities | filter: $select.search">
-            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-          </choices>
-        </ui-select>
-        <ui-select ng-model="entities.sourceGeoEntity.selected" theme="bootstrap">
-          <match placeholder="Select a Geographical area...">{{$select.selected.RICname}}</match>
-          <choices repeat="item in reportingGeoEntities | filter: $select.search">
-            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-          </choices>
-        </ui-select>
-        <ui-select ng-model="entities.sourceContinentEntity.selected" theme="bootstrap">
-          <match placeholder="Select a Continent...">{{$select.selected.RICname}}</match>
-          <choices repeat="item in reportingContinentEntities | filter: $select.search">
-            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-          </choices>
-        </ui-select>
-        </div>
-      </div>
-      <div class="row list">
-        <div class="col-sm-12">
-          <h3>selected entities</h3>
-          <div list-world></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-9">
-      <!-- <div class="row"> -->
-        <h3 class="subtitle">Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in {{actualCurrency}}</h3>
-        <div class="col-sm-12 white">
-          <div class="filter-group">
-              <div class="btn-group pull-right">
-                <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
-                <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
-                <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
-              </div>
-              <div style="clear:both;"></div>
+<style type="text/css">
+  .bar {
+  fill: steelblue;
+}
+.bar:hover {
+  fill: brown;
+}
+</style>
+
+<div id="sticky-marker"></div>
+<div id="sticky-container">
+  <div class="container">
+    <div class="row">
+      <div class="timeline-cont col-sm-12">
+        <world-title></world-title>
+        <div class="legend">
+          <div class="legend-item">
+            <div class="square import"></div> Import
+          </div>
+          <div class="legend-item">
+            <div class="square export"></div> Export
+          </div>
+          <div class="legend-item">
+            <div class="line available"></div> Available data
+          </div>
+          <div class="legend-item">
+            <div class="line unavailable"></div> Unavailable data
+          </div>
+          <div class="legend-item">
+            Data expressed in <strong>{{actualCurrency}}</strong>
           </div>
         </div>
-      <!-- </div> -->
-      <!-- <div class="row"> -->
-        <div class="col-sm-12 white">
-          <div linechart-world></div>
-        </div>
-      <!-- </div> -->
+        <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></dual-timeline>
+      </div>
     </div>
   </div>
+</div>
+
+  <div class="container">
+    <div class="row" >
+      <div class="col-sm-12">
+        <world-title id="alt-title" style="display:none;"></world-title>
+        <brushing-timeline
+          ng-data="timelineData"
+          start-date="selectedMinDate"
+          end-date="selectedMaxDate"
+          raw-start-date="rawMinDate"
+          raw-end-date="rawMaxDate"
+          source-country="entities.sourceEntity.selected.RICname"
+          target-country="entities.targetEntity.selected.RICname"
+        ></brushing-timeline>
+      </div>
+    </div>
+  </div>
+<div class="container">
+
+<div class="row">
+    <div class="col-sm-9">
+      <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
+      <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
+      <span ng-if="!$last">, </span>
+      </span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}
+      <i class="fa fa-info-circle"></i> </h3>
+    </div>
+    <div class="col-sm-2" style="float:right">
+      <div class="filter-group" ng-show="RICentitiesDD.length">
+          <div class="btn-group pull-right">
+            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
+            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
+            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
+          </div>
+      </div>
+    </div>
+  <div id="select-lineChart">
+    <div>
+      <h3 class="subtitle col-sm-2">select up to 5 partners:</h3>
+    </div>
+    <div class="select-dropdown col-sm-8" ng-show="RICentitiesDD.length">
+      
+      <ui-select  class="selectPartners" ng-model="entities.sourceCountryEntity.selected" theme="bootstrap">
+        <match placeholder="Country...">{{$select.selected.RICname}}</match>
+        <choices repeat="item in reportingCountryEntities | filter: $select.search">
+          <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+        </choices>
+      </ui-select>
+
+      <ui-select class="selectPartners" ng-model="entities.sourceColonialEntity.selected" theme="bootstrap">
+        <match placeholder="Colonial area...">{{$select.selected.RICname}}</match>
+        <choices repeat="item in reportingColonialEntities | filter: $select.search">
+          <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+        </choices>
+      </ui-select>
+
+      <ui-select class="selectPartners" ng-model="entities.sourceGeoEntity.selected" theme="bootstrap">
+        <match placeholder="Geographical area...">{{$select.selected.RICname}}</match>
+        <choices repeat="item in reportingGeoEntities | filter: $select.search">
+          <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+        </choices>
+      </ui-select>
+
+      <ui-select class="selectPartners" ng-model="entities.sourceContinentEntity.selected" theme="bootstrap">
+        <match placeholder="Continent...">{{$select.selected.RICname}}</match>
+        <choices repeat="item in reportingContinentEntities | filter: $select.search">
+          <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+        </choices>
+      </ui-select>
+
+      <ui-select class="selectPartners" ng-model="entities.sourceWorldEntity.selected" theme="bootstrap">
+        <match placeholder="World aggregate...">{{$select.selected.RICname}}</match>
+        <choices repeat="item in reportingWorldEntities | filter: $select.search">
+          <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+        </choices>
+      </ui-select>
+    </div>
+        <div class="col-sm-12">
+          <div id="linechart-world"  linechart-world></div>
+        </div>
+    </div>
+<!--     </div>
+        <div class="col-sm-12 ">
+          <bar-chart ng-data="histoCountry"><bar-chart/>
+        </div>
+    </div>
+    </div>
+        <div class="col-sm-12 ">
+          <circle-packing ng-data="histoCountry"><circle-packing/>
+        </div>
+    </div> -->
+    
+</div>
   <div class="row">
     <div class="col-sm-12 text-center shdt">
       <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
