--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -15,9 +15,6 @@
         <world-title></world-title>
         <div class="legend">
           <div class="legend-item">
-            <div class="square import"></div> Import
-          </div>
-          <div class="legend-item">
             <div class="square export"></div> Export
           </div>
           <div class="legend-item">
@@ -30,13 +27,13 @@
             Data expressed in <strong>{{actualCurrency}}</strong>
           </div>
         </div>
-        <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></dual-timeline>
+        <world-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></world-timeline>
       </div>
     </div>
   </div>
 </div>
 
-  <div class="container">
+<div class="container">
     <div class="row" >
       <div class="col-sm-12">
         <world-title id="alt-title" style="display:none;"></world-title>
@@ -51,26 +48,37 @@
         ></brushing-timeline>
       </div>
     </div>
-  </div>
+</div>
+
 <div class="container">
 
-<div class="row">
-    <div class="col-sm-9">
-      <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
-      <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
-      <span ng-if="!$last">, </span>
-      </span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}
-      <i class="fa fa-info-circle"></i> </h3>
-    </div>
-    <div class="col-sm-2" style="float:right">
-      <div class="filter-group" ng-show="RICentitiesDD.length">
-          <div class="btn-group pull-right">
-            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
-            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
-            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
-          </div>
+  <div class="row">
+      <div class="col-sm-8">
+        <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
+        <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
+        <span ng-if="!$last">, </span>
+        </span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}
+        <i class="fa fa-info-circle"></i> </h3>
       </div>
-    </div>
+      <div class="col-sm-2" style="float:right">
+        <div class="filter-group" ng-show="RICentitiesDD.length">
+            <div class="btn-group pull-right">
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>Total</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>Imports</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>Exports</label>
+            </div>
+        </div>
+      </div>
+      <div class="col-sm-2" style="float:right">
+        <div class="filter-group" ng-show="RICentitiesDD.length">
+            <div class="btn-group pull-right">
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'sterling'" uncheckable>Sterling</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'Pourcent'" uncheckable>Pourcent</label>
+            </div>
+      </div>
+      </div>
+      <inline-select-filter ng-model="moded.selected" list="modes"></inline-select-filter>
+  </div>
   <div id="select-lineChart">
     <div>
       <h3 class="subtitle col-sm-2">select up to 5 partners:</h3>
@@ -112,10 +120,17 @@
         </choices>
       </ui-select>
     </div>
-        <div class="col-sm-12">
-          <div id="linechart-world"  linechart-world></div>
-        </div>
+
+  <div class="row">
+
+    <div class="col-sm-12">
+      <div id="linechart-world"  linechart-world></div>
     </div>
+
+  </div>
+  </div>
+</div>
+
 <!--     </div>
         <div class="col-sm-12 ">
           <bar-chart ng-data="histoCountry"><bar-chart/>
@@ -126,8 +141,6 @@
           <circle-packing ng-data="histoCountry"><circle-packing/>
         </div>
     </div> -->
-    
-</div>
   <div class="row">
     <div class="col-sm-12 text-center shdt">
       <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
