--- a/client/partials/countryTitle.html
+++ b/client/partials/countryTitle.html
@@ -1,4 +1,4 @@
-<h4>
+<h4 class="titleDualTL">
   Total trade of
   <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities"></inline-select-country>
   from
