--- a/client/css/style.css
+++ b/client/css/style.css
@@ -123,6 +123,7 @@ body > .container {
 
 /* Components*/
 
+
 /* navbar */
 
 #nav .navbar{
@@ -192,6 +193,9 @@ body > .container {
   min-height: 70px;
 
 }
+#select-lineChart .dropdown {
+  float: left;
+}
 
 .select-dropdown .btn:hover{
   background-color: transparent;
@@ -223,55 +227,76 @@ body > .container {
 
 /* inline selector */
 
-.inline-select, .inline-select .ui-select-bootstrap{
+.filterSelection {
+  padding-top: 10px;
+}
+
+.inline-select, .inline-select .ui-select-bootstrap, #select-doubleChart select{
   display: inline-block;
 }
 
-.inline-select input{
+.inline-select input, #select-doubleChart select{
   display: inline;
 }
 
-.inline-select .ui-select-bootstrap button{
+.inline-select .ui-select-bootstrap button, #select-doubleChart select{
   padding-right: 30px;
   font-size: 16px;
   font-weight: 600;
 }
 
-.inline-select .btn, .inline-select .form-control{
+.inline-select .btn, .inline-select .form-control, #select-doubleChart select{
   border: 0;
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
   color: #663333;
   background-color: #FAFAFA;
+  border-bottom: 1px solid black;
 }
 
-.inline-select .btn:hover{
+.selectPartners > .ui-select-match {
+  padding:6px 8px;
+}
+
+.btn-sm, .btn-group-sm > .btn{
+  padding: 5px 5px;
+}
+
+.inline-select .btn:hover, #select-doubleChart select{
   background-color: #FFF;
 }
 
-.inline-select *:focus, .inline-select *:active:focus{
+.inline-select *:focus, .inline-select *:active:focus, #select-doubleChart select{
   outline: 0;
 }
 
-.inline-select .dropdown-menu{
-  border-color:#e7e7e7;
+.selectFilters .dropdown-menu, #select-doubleChart select{
+  /*display: inline-block;*/
+  /*border-color:#e7e7e7;
   border-radius: 0;
-  border-width: 0 1px 1px 1px;
-  font-size: 13px; 
-  -webkit-box-shadow: none;
+  border-width: 0 1px 1px 1px;*/
+/*  -webkit-box-shadow: none;
   box-shadow: none;
-  min-width: 294px;
   left: -16px;
+  padding-right: 30px;*/
+  font-size: 16px;
+  font-weight: 600; 
+  color: #633;
 }
 
-.inline-select .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus{
+#selectFilters {
+  padding-top: 10px;
+}
+
+.inline-select .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus, #select-doubleChart select{
   color: #222;
   background-color: #e8e8e8;
 }
 
-.inline-select  .dropdown-menu > li > a {
-  padding: 10px 20px;
+.inline-select  .dropdown-menu > li > a , #select-doubleChart select{
+  padding: 10px 15px;
+  color: #633;
 }
 
 /*
@@ -285,11 +310,15 @@ body > .container {
 
 /* timeline */
 
+#dual-timeline-container>svg, #comparison-timeline-container>svg{
+  padding-top: 10px;
+}
+
 h4{
   /*border-bottom: 3px solid #e5e5e5;*/
   margin-bottom: 0;
-  margin-top: 35px;
-  padding-bottom: 10px;
+  /*margin-top: 35px;*/
+  padding-bottom: 5px;
 }
 .axis path,
 .axis line {
@@ -401,6 +430,12 @@ h4{
   font-size: 0.8em;
 }
 
+.legend-item{
+  display: inline-block;
+  margin-right: 12px;
+  font-size: 0.8em;
+}
+
 .legend .square{
   display: inline-block;
   margin-bottom: -2px;
@@ -441,6 +476,39 @@ h4{
   text-align: right;
 }
 /* grid */
+
+.grid-overlay-msg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.grid-overlay-msg .msg {
+  opacity: 1;
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  width: 60%;
+  height: 50%;
+  background-color: #eee;
+  border-radius: 4px;
+  border: 1px solid #555;
+  text-align: center;
+  font-size: 24px;
+  display: table;
+}
+ 
+/*
+  Lastly this is the actual message text. It uses
+  display: table-cell so the vertical alignment
+  works properly.
+*/
+.grid-overlay-msg .msg span {
+  display: table-cell;
+  vertical-align: middle;
+}
 
 .table-cont{
   margin-bottom: 20px;
@@ -521,6 +589,10 @@ font-size: 1.1em;
   margin-bottom: 10px;
 }
 
+#partners-histogram-container>svg {
+  padding-top: 30px;
+}
+
 .partners-tooltip {
   position: absolute;
   background: #333;
@@ -530,6 +602,8 @@ font-size: 1.1em;
   border-radius: 5px;
   opacity: 0;
   text-align: center;
+  margin-top: -100px;
+  pointer-events: none;
 }
 .partners-tooltip h3 {
   margin: 3px 5px;
@@ -547,9 +621,14 @@ font-size: 1.1em;
   min-height: 500px;
 }
 
+.subtitle > i{
+  margin-left: 10px;
+}
+
 /* world */
 
 #list-world-container {
+  float:left;
   padding: 10px 0;
 }
 
@@ -583,7 +662,6 @@ font-size: 1.1em;
 #loading-bar-spinner .spinner-icon {
   width: 42px;
   height: 42px;
-
   border:  solid 3px transparent;
   border-top-color:  #777;
   border-left-color: #777;
@@ -636,4 +714,67 @@ font-size: 1.1em;
 }
 .fade-view.ng-leave-active {
     opacity: 0;
+}
+
+/* Scatter Plot */
+#chart {
+  height: 506px;
+}
+/*text {
+  font-size: 10px;
+}*/
+.dot {
+  stroke: #000;
+}
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+.label {
+  fill: #777;
+}
+.year.label {
+  font: 500 196px "Helvetica Neue";
+  fill: #ddd;
+}
+.country.label  {
+  font: 500 96px "Helvetica Neue";
+  fill: #ddd;
+}
+.year.label.active {
+  fill: #aaa;
+}
+/*circle.pointTrajectory {
+   pointer-events: none;
+   stroke: lightgray;
+   fill: black;
+   opacity: 0;
+}*/
+path.lineTrajectory {
+  stroke-width: 2;
+  stroke-opacity: .5;
+  stroke: black;
+  fill: none;
+  pointer-events: none;
+}
+.selected {
+  stroke-width: 4;
+}
+
+#scatter-plot-container > svg {
+  padding-left: 50px;
+}
+
+.scatterPlot-tooltip {
+  position: absolute;
+  background: #333;
+  color: #ddd;
+  padding: 2px;
+  border: 0px;
+  border-radius: 5px;
+  opacity: 0;
+  text-align: center;
+  font-size: 12px;
+  pointer-events: none;
 }
