--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,1 +1,4 @@
-<h1>hello RICardo</h1>
+<div class="container" >
+	<h1>Projet RICardo</h1>
+	<p>Le projet RICardo vise à construire une base de données commerciales regroupant des statistiques du commerce bilatéral des pays du monde sur la période 1800-1938, et à la mettre en ligne sous forme de visualisations. Commencé en 2004, ce projet a permis de construire une base de 270 000 données (juin 2015) et il est prévu d'ouvrir le site web courant 2016.</p>	
+</div>
