--- a/client/partials/worldTitle.html
+++ b/client/partials/worldTitle.html
@@ -1,11 +1,8 @@
 <h4>
-  Total trade of
-<!--   <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities"></inline-select-country> -->
-World
+  Total trade of World
   from
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
   to
   <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
-  in Sterling
-  <!-- <inline-select-filter ng-model="moded.selected" list="modes"></inline-select-filter> -->
+
 </h4>
