--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -14,6 +14,9 @@
       <div class="timeline-cont col-sm-12">
         <world-title></world-title>
         <div class="legend">
+        <div class="legend-item">
+          <div class="square import"></div> Import
+        </div>
           <div class="legend-item">
             <div class="square export"></div> Export
           </div>
@@ -43,8 +46,6 @@
           end-date="selectedMaxDate"
           raw-start-date="rawMinDate"
           raw-end-date="rawMaxDate"
-          source-country="entities.sourceEntity.selected.RICname"
-          target-country="entities.targetEntity.selected.RICname"
         ></brushing-timeline>
       </div>
     </div>
@@ -54,13 +55,14 @@
 
   <div class="row">
       <div class="col-sm-8">
-        <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
+       <!--  <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with  -->
+       <h3 class="subtitle">World trade comparaison with 
         <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
         <span ng-if="!$last">, </span>
         </span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}
         <i class="fa fa-info-circle"></i> </h3>
       </div>
-      <div class="col-sm-2" style="float:right">
+<!--       <div class="col-sm-2" style="float:right">
         <div class="filter-group" ng-show="RICentitiesDD.length">
             <div class="btn-group pull-right">
               <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>Total</label>
@@ -68,16 +70,18 @@
               <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>Exports</label>
             </div>
         </div>
-      </div>
-      <div class="col-sm-2" style="float:right">
+      </div> -->
+      <div class="col-sm-4" style="float:right">
         <div class="filter-group" ng-show="RICentitiesDD.length">
             <div class="btn-group pull-right">
-              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'sterling'" uncheckable>Sterling</label>
-              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'Pourcent'" uncheckable>Pourcent</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
+              <label class="btn btn-sm btn-default" ng-model="convertion" btn-radio="'sterling'" uncheckable>Sterling</label>
+              <label class="btn btn-sm btn-default" ng-model="convertion" btn-radio="'value'" uncheckable>Pourcent</label>
             </div>
       </div>
       </div>
-      <inline-select-filter ng-model="moded.selected" list="modes"></inline-select-filter>
+     <!--  <inline-select-filter ng-model="moded.selected" list="modes"></inline-select-filter> -->
   </div>
   <div id="select-lineChart">
     <div>
