--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -89,7 +89,7 @@
   <div ng-if="viewTable" class="row table-cont">
     <div class="col-sm-12 grid-cont">
       <div class="gridStyle" ng-grid="gridOptions">
-        <!-- <div class="no-data" ng-hide="gridOptions.data.length && !loading"></div> -->
+        <div class="no-data" ng-hide="gridOptions.data.length && !loading"></div>
       </div>
     </div>
   </div>
