--- a/client/css/style.css
+++ b/client/css/style.css
@@ -299,15 +299,6 @@ body > .container {
   color: #633;
 }
 
-/*
-.inline-select .ui-select-bootstrap > .ui-select-choices{
-  width: 300px;
-}
-
-.inline-select .dropdown-menu{
-  margin: 10px 0 0 -155px;
-}*/
-
 /* timeline */
 
 #dual-timeline-container>svg, #comparison-timeline-container>svg{
@@ -324,7 +315,7 @@ h4{
 .axis line {
   fill: none;
   stroke: #CCC;
-  stroke-dasharray: 2,2;
+  /*stroke-dasharray: 2,2;*/
   shape-rendering: crispEdges;
 }
 
@@ -606,7 +597,7 @@ font-size: 1.1em;
   border-radius: 5px;
   opacity: 0;
   text-align: center;
-  margin-top: -100px;
+  margin-top: -130px;
   pointer-events: none;
 }
 .partners-tooltip h3 {
