--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -51,7 +51,7 @@
     <div class="col-md-6">
       <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} by partners, {{selectedMinDate}} – {{selectedMaxDate}} <i class="fa fa-info-circle"></i></h3>
       <div class="legend-item">
-          Average share in <strong>pourcentage</strong> | Trade balance in <strong>sterling</strong>
+          Average share in <strong>pourcentage</strong> on {{ordered.selected.name.value}}| Trade balance in <strong>sterling</strong>
       </div> 
     </div>
     <div class="col-md-6 inline-select" style="float:right;">
