--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -64,7 +64,7 @@
   </div>
   <div id="select-lineChart">
     <div>
-      <h3 class="subtitle col-sm-2">select up to 5 partners:</h3>
+      <h3 class="subtitle col-sm-2">select up to 5 reporting :</h3>
     </div>
     <div class="select-dropdown col-sm-8" ng-show="RICentitiesDD.length">
       
